# docs/swagger/server/swagger.yaml
@@ -1,6 +1,5 @@
-basePath: /api/v1
 definitions:
-  dto.Error:
+  Error:
     properties:
       details:
         description: |-
@@ -24,7 +23,7 @@ definitions:
         type: string
       type:
         allOf:
-        - $ref: '#/definitions/dto.ErrorType'
+        - $ref: '#/definitions/ErrorType'
         description: |-
           ErrorType - machine-readable error type.
 
@@ -34,11 +33,11 @@ definitions:
     - message
     - type
     type: object
-  dto.ErrorResponse:
+  ErrorResponse:
     properties:
       error:
         allOf:
-        - $ref: '#/definitions/dto.Error'
+        - $ref: '#/definitions/Error'
         description: |-
           Error - error.
 
@@ -55,7 +54,7 @@ definitions:
     - error
     - statusCode
     type: object
-  dto.ErrorType:
+  ErrorType:
     enum:
     - REQUEST_INVALID_FORMAT
     - REQUEST_VALIDATION_ERROR
@@ -63,7 +62,7 @@ definitions:
     x-enum-varnames:
     - RequestInvalidFormat
     - RequestValidationError
-  dto.TestRequest:
+  TestRequest:
     properties:
       mes:
         type: string
@@ -77,7 +76,7 @@ definitions:
     - message
     - number
     type: object
-  dto.TestResponse:
+  TestResponse:
     properties:
       mes:
         type: string
@@ -91,50 +90,39 @@ definitions:
     - message
     - number
     type: object
-externalDocs:
-  description: OpenAPI
-  url: https://swagger.io/resources/open-api/
-host: localhost:8080
 info:
-  contact:
-    email: support@swagger.io
-    name: API Support
-    url: http://www.swagger.io/support
-  description: "# Admin TAG API documentation\r\n\r\n**Admin** functions goes here
-    \r\n\r\nFor more info please read [link](/docs/readme.md)."
-  license:
-    name: Apache 2.0
-    url: http://www.apache.org/licenses/LICENSE-2.0.html
-  termsOfService: http://swagger.io/terms/
-  title: Swagger Example API 1
-  version: "2.0"
+  contact: {}
+  description: "# go-password-keeper app\r\n\r\nLoading info..."
+  title: Server API
+  version: "1.0"
 paths:
   /test:
-    get:
+    post:
       consumes:
       - application/json
       description: Test handler for developing
       parameters:
-      - description: Optional ping request with custom message
+      - description: Request
         in: body
         name: request
+        required: true
         schema:
-          $ref: '#/definitions/dto.TestRequest'
+          $ref: '#/definitions/TestRequest'
       produces:
       - application/json
       responses:
         "200":
           description: Successful response
           schema:
-            $ref: '#/definitions/dto.TestResponse'
+            $ref: '#/definitions/TestResponse'
         "400":
           description: Invalid request format or validation error
           schema:
-            $ref: '#/definitions/dto.ErrorResponse'
+            $ref: '#/definitions/ErrorResponse'
         "500":
           description: Internal server error
           schema:
-            $ref: '#/definitions/dto.ErrorResponse'
+            $ref: '#/definitions/ErrorResponse'
       summary: Test handler
       tags:
       - developing
@@ -142,7 +130,3 @@ securityDefinitions:
   BasicAuth:
     type: basic
 swagger: "2.0"
-tags:
-- description: "# Admin TAG NO API documentation\r\n\r\n**Admin** NO functions goes
-    here \r\n\r\nFor NO more info please read [link](/docs/readme.md)."
-  name: server_desc
