# internal/server/http/dto/test_request.go
@@ -4,4 +4,4 @@ type TestRequest struct {
 	Number  int     `json:"number"        validate:"required,min=100,max=599"`
 	Message string  `json:"message"       validate:"required"`
 	Mes     *string `json:"mes,omitempty" validate:"omitempty"`
-}
+} // @name TestRequest
